@startuml
entity users {
  *id : BIGSERIAL <<PK>>
  --
  first_name : VARCHAR(80)
  last_name : VARCHAR(80)
  email : VARCHAR(160) <<UNIQUE>>
  password_hash : VARCHAR(255)
  phone : VARCHAR(32)
  bio : TEXT
  avatar_url : VARCHAR(500)
  has_vehicle : BOOLEAN
  role : VARCHAR(16)
  created_at : TIMESTAMP
}
entity vehicles {
  *id : BIGSERIAL <<PK>>
  user_id : BIGINT <<FK>> <<UNIQUE>>
  brand : VARCHAR(80)
  model : VARCHAR(80)
  color : VARCHAR(40)
  license_plate : VARCHAR(32) <<UNIQUE>>
  seats : INT
}
entity posts {
  *id : BIGSERIAL <<PK>>
  author_id : BIGINT <<FK>>
  type : VARCHAR(16)
  origin : VARCHAR(120)
  destination : VARCHAR(120)
  departure_date : DATE
  departure_time : TIME
  seats_available : INT
  price : NUMERIC(10,2)
  description : TEXT
  status : VARCHAR(16)
  created_at : TIMESTAMP
}
entity conversations {
  *id : BIGSERIAL <<PK>>
  post_id : BIGINT <<FK,nullable>>
  created_at : TIMESTAMP
}
entity conversation_participants {
  *conversation_id : BIGINT <<FK>>
  *user_id : BIGINT <<FK>>
}
entity messages {
  *id : BIGSERIAL <<PK>>
  conversation_id : BIGINT <<FK>>
  sender_id : BIGINT <<FK>>
  content : TEXT
  sent_at : TIMESTAMP
  is_read : BOOLEAN
}
entity notifications {
  *id : BIGSERIAL <<PK>>
  recipient_id : BIGINT <<FK>>
  type : VARCHAR(32)
  payload : JSONB
  is_read : BOOLEAN
  created_at : TIMESTAMP
}
users ||--o| vehicles
users ||--o{ posts
conversations ||--o{ conversation_participants
users ||--o{ conversation_participants
conversations ||--o{ messages
users ||--o{ messages
users ||--o{ notifications
posts ||--o{ conversations
@enduml
